--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.14.0",
     "sequelize-cli": "^6.4.1"
